# cubedynamics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CHANGELOG_CLIMATE_REVISION.md  CHANGELOG_MANUSCRIPT.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.mini  INSTALL.md  Makefile  PROMPT_LOG.md  README.md  RELEASING.md  SECURITY.md  conftest.py  cube_da.html  cube_da_9f3c0b38bbaa4d05bb8b052b39c92a58.html  fire_plot_projection_check.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.playwright-mcp/: page-2026-07-07T01-40-42-648Z.yml
analysis/: claim_audit_manifest.json  climate_data_inventory.md  climate_limits_report.md  climate_model_report.md  climate_revision_terminal_summary.txt  climate_section_decision.md  developmental_response_dictionary.md  figure_restructure_plan.md  figure_text_alignment.md  final_terminal_report.txt  main_figure_restructure_plan.md  manuscript_claim_audit.md  null_model_report.md  pc1_robustness_report.md  prediction_section_decision.md  state_dependent_climate_report.md  summary_vase_methods.md  vase_visual_grammar.md
artifacts/: median_split_synchrony_cube.html
climate_cube_math/: __init__.py
config/: fire_vase_developmental_atlas.yml  fire_vase_pipeline.yml  repository_policy.yml  storage.example.yml
data/: README.md
docs/: CITATION.cff  api.md  capabilities.md  captions_legends.md  changelog.md  climate_cubes.md  concepts.md  contributing.md  cubeplot_grammar.md  design_philosophy.md  development.md  examples_gallery.md  function_inventory.md  getting_started.md  index.md  lexcube.md  methods_and_citation.md  ops_io.md  ops_stats.md  ops_transforms.md  overview.md  pipe_syntax.md  pipe_verbs.md  quickstart.md  reading_paths.md  semantic_variables.md  start_here.md  streaming_large_data.md  streaming_renderer.md  streaming_sources.md  tubes.md  updates.md  vase-volumes.md  vase_volumes.md  viewer_debug_notes.md  viewers.md  vignette.ipynb  vignette_minimal_ndvi.md  virtual_cubes.md  why_cubedynamics.md  (+1 more)
envs/: cube-env.yml
examples/: climate_biology_sync_demo.py  climate_synchrony_cube_panel_demo.py  fire_plot_demo.py  fire_time_hull_gridmet_demo.py  fire_vase_death_exploratory_report.py  fire_vase_developmental_atlas.py  fire_vase_panel_demo.py  fire_vase_pdf_panel_demo.py  four_synchrony_types.py  ghosh_tail_association_demo.py  median_split_synchrony_demo.py  real_fire_vase_gridmet_smoke.py  real_prism_median_split_synchrony.py  synchrony_section_assets.py  two_cube_viewers.py
manifests/: README.md
notebooks/: 06_vase_volume_basic.ipynb  07_vase_volume_3d_viz.ipynb  cube_grammar_tutorial.ipynb  cube_viewer_perf.ipynb  example_sentinel2_ndvi_zscore.ipynb  faceting_cubeplot_refresh.ipynb  quickstart_cubedynamics.ipynb  scientific_figure.ipynb  streaming_first_demo.ipynb
outputs/: README.md  README_fire_vase_death_report.md  fire_vase_alignment_quality.csv  fire_vase_analysis_table.csv  fire_vase_candidate_results.csv  fire_vase_cluster_sensitivity.csv  fire_vase_data_availability.csv  fire_vase_death_exploratory_report.html  fire_vase_developmental_manifest.json  fire_vase_developmental_traits.csv  fire_vase_event_centered_climate.csv  fire_vase_event_table.csv  fire_vase_pca_loadings.csv  fire_vase_qc_table.csv  fire_vase_quality_control.csv  fire_vase_report_manifest.json  fire_vase_state_transitions.csv  fire_vase_summary_table.csv  fire_vase_terminal_features.csv  fire_vase_time_table.csv
paper/: paper.bib  paper.md
schemas/: cohort_summaries.schema.json  fire_catalog.schema.json  fire_events.schema.json  fire_geometry.schema.json  fire_observations_raw.schema.json  fire_time.schema.json  fire_traits.schema.json  processing_failures.schema.json  processing_manifest.schema.json  processing_runs.schema.json  vase_assets.schema.json  vase_climate_exposures.schema.json  vase_slices.schema.json
scripts/: build_fire_vase_google_docs_docx.py  cache_gridmet_years.py  check_repository_size.py  fire_vase_build_climate_tables.py  fire_vase_build_perimeter_climate_tables.py  fire_vase_climate_revision.py  fire_vase_developmental_morphology_analysis.py  fire_vase_lakehouse_pilot.py  fire_vase_manuscript_claim_audit.py  fire_vase_morphology_atlas_pdf.py  fire_vase_population_atlas_pdf.py  fire_vase_science_manuscript_pdf.py
tests/: conftest.py  (+74 more)
(+350 files in other folders)
