[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cubedynamics"
version = "0.1.0"
description = "Streaming-first climate cube math and correlation tools"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Ty Tuff" },
]
dependencies = [
    "numpy",
    "xarray",
    "pandas",
    "rasterio",
    "rioxarray",
    "pystac-client",
    "planetary-computer",
    "pyproj",
    "requests",
    "dask",
    "cubo",
    "matplotlib",
    "Pillow",
    "crc32c",
    "plotly",
    "geopandas",
    "shapely",
]

[project.urls]
Homepage = "https://github.com/CU-ESIIL/cubedynamics"
Documentation = "https://cu-esiil.github.io/cubedynamics/"
Source = "https://github.com/CU-ESIIL/cubedynamics"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"cubedynamics.viewers" = ["templates/*.html"]

[tool.setuptools.packages.find]
where = ["src"]
