[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cubedynamics"
version = "0.1.0"
description = "Streaming-first climate cube math and correlation tools"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Ty Tuff" },
]
license = { file = "LICENSE" }
keywords = ["climate", "data-cubes", "xarray", "dask", "geospatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy<2",
    "xarray",
    "pandas",
    "rasterio",
    "rioxarray",
    "pystac-client",
    "planetary-computer",
    "pyproj",
    "requests",
    "dask",
    "cubo",
    "matplotlib",
    "Pillow",
    "crc32c",
    "plotly",
    "geopandas",
    "shapely",
    "scipy",
    "ipython",
]

[project.optional-dependencies]
viz = [
    "lexcube",
]
test = [
    "pytest",
    "build",
    "twine",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-git-revision-date-plugin",
    "mkdocs-jupyter",
]
dev = [
    "pytest",
    "build",
    "twine",
    "mkdocs>=1.6",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-git-revision-date-plugin",
    "mkdocs-jupyter",
    "lexcube",
]

[project.urls]
Homepage = "https://github.com/CU-ESIIL/cubedynamics"
Repository = "https://github.com/CU-ESIIL/cubedynamics"
Documentation = "https://cu-esiil.github.io/cubedynamics/"
Issues = "https://github.com/CU-ESIIL/cubedynamics/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"cubedynamics.viewers" = ["templates/*.html"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cubedynamics*", "climate_cube_math*"]
